--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -102,10 +102,10 @@
 
                                     <br clear="all" />
 
-                                    <div class="col-md-3 user-img">
+                                    <div class="col-md-3 col-sm-3 user-img">
                                         <img src="{{ participant.image_url }}" class="img-responsive" />
                                     </div>
-                                    <div class="col-md-9 user-info">
+                                    <div class="col-md-9 col-sm-9 user-info">
                                         <h4><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ participant }}</h4>
                                     </div>
                                 </div>
