--- a/chat/templates/chat/_view_participant.html
+++ b/chat/templates/chat/_view_participant.html
@@ -2,14 +2,14 @@
 
 {% is_online participant as status %}
 
-<div class="col-md-12 participant panel">
-    <div class="col-md-1 user-img">
+<div class="col-md-12 col-sm-12 participant panel">
+    <div class="col-md-1 col-sm-1 user-img">
         <img src="{{ participant.image_url }}" class="img-responsive" />
     </div>
-    <div class="col-md-6 user-info">
+    <div class="col-md-4 col-sm-4 user-info">
         <h4><a class="user_{{ participant.id }}_status status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ participant }}</h4>
     </div>
-    <div class="col-md-4 buttons pull-right text-center">
+    <div class="col-md-6 col-sm-6 buttons pull-right text-center">
         <a href="#" onclick="getModalInfo($(this), '{{ space }}', '{{ space_type }}'); return false;" data-url='{% url "chat:profile" participant.email %}' class="btn btn-raised btn-default">{% trans 'See Profile' %}</a>
         <a href="#" onclick="getModalInfo($(this), '{{ space }}', '{{ space_type }}'); return false;" data-url='{% url "chat:talk" participant.email %}' class="btn btn-raised btn-success">{% trans 'Send Message' %}</a>
     </div>
