Cancel button now works

--- a/news/templates/news/_form.html
+++ b/news/templates/news/_form.html
@@ -59,7 +59,7 @@
 				<input type="submit" value="{% trans 'Save' %}" class="btn btn-success btn-raised btn-block" />
 			</div>
 			<div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-				<a href="" class="btn btn-default btn-raised btn-block">{% trans 'Cancel' %}</a>
+				<input type=button value="{% trans 'Cancel' %}" class="btn btn-default btn-raised btn-block" onClick="window.history.back();return false;">
 			</div>
 		</div>
 	</div>
