--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -7,7 +7,37 @@
 		</div>
 		<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-body">
 			<h4 class="post-user">
-				{{ post.user }}
+				{% if not post.user == request.user %}
+					{% is_online post.user as status %}
+
+					<span data-toggle="popover" data-placement="right">{{ post.user }}</span>
+
+					<div class="popover">
+	                    <div class="popover-content participant">
+	                        <button type="button" class="close" aria-label="{% trans 'Close' %}"><span aria-hidden="true">&times;</span></button>
+
+	                        <br clear="all" />
+
+	                        <div class="col-md-3 col-sm-3 user-img">
+	                            <img src="{{ post.user.image_url }}" class="img-responsive" />
+	                        </div>
+	                        <div class="col-md-9 col-sm-9 user-info">
+	                            <h4><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ post.user }}</h4>
+	                        </div>
+	                    </div>
+	                    <div class="popover-footer">
+	                        <a href="#" onclick="getModalInfo($(this), '{{ post|chat_space }}', '{{ post|chat_space_type }}'); return false;" data-url='{% url "chat:profile" post.user.email %}' class="btn btn-default btn-sm btn-raised pull-left">
+	                            {% trans 'See Profile' %}
+	                        </a>
+	                        <a href="#" onclick="getModalInfo($(this), '{{ post|chat_space }}', '{{ post|chat_space_type }}'); return false;" data-url='{% url "chat:talk" post.user.email %}' class="btn btn-success btn-sm btn-raised pull-right">
+	                            {% trans 'Send Message' %}
+	                        </a>
+	                    </div>
+	                </div>
+	            {% else %}
+	            	{{ post.user }}
+	            {% endif %}
+
 				<span class="user-action">
 					<i class="fa {{ post.action|action_icon }}"></i>
 					{{ post.get_action_display }}
