Importing print this on base.html

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -34,6 +34,8 @@
 		<script src="{% static 'js/crop.js' %}"></script> <!-- Js for cropper-->
 		<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet"> <!-- CSS for cropper-->
 
+		<script type="text/javascript" src="{% static 'js/printThis.js' %}"></script> <!-- Print this plugin js-->
+
 
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 	<!--<script type="text/javascript" src="{% static 'js/bootstrap-acessibility2.min.js' %}"></script>-->
