--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -32,6 +32,7 @@
 
  		<script src="{% static 'js/cropper.min.js' %}"></script> <!-- Js for cropper-->
 		<script src="{% static 'js/crop.js' %}"></script> <!-- Js for cropper-->
+		<script src="{% static 'js/crop_news.js' %}"></script>
 		<link href="{% static 'css/cropper.min.css' %}" rel="stylesheet"> <!-- CSS for cropper-->
 
 		<script type="text/javascript" src="{% static 'js/printThis.js' %}"></script> <!-- Print this plugin js-->
