Including news_js in news templates

--- a/news/templates/news/_form.html
+++ b/news/templates/news/_form.html
@@ -66,4 +66,6 @@
 	</div>
 
 </form>
+<script src="{% static 'js/crop_news.js' %}"></script> <!-- Js for cropper-->
+
 {% include 'users/modal_crop.html'  %}
