--- a/news/templates/news/create.html
+++ b/news/templates/news/create.html
@@ -21,4 +21,5 @@
 <br clear="all">
 <br clear="all">
 
+<script src="{% static 'js/crop_news.js' %}"></script> <!-- Js for cropper-->
 {% endblock %}
