Including crop js of users in the users templates

--- a/users/templates/users/list.html
+++ b/users/templates/users/list.html
@@ -80,4 +80,7 @@
     <div id="modal_remove">
 
     </div>
+
+
+<script src="{% static 'js/crop.js' %}"></script> <!-- Js for cropper-->
 {% endblock %}
