--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -101,6 +101,7 @@
 	</div>
 
 {% include 'users/modal_crop.html'  %}
+<script src="{% static 'js/crop.js' %}"></script> <!-- Js for cropper-->
 
 {% endblock %}
 
