Adicionando as meta tags robots e keywords para ser mais facil de encontrar o amadeus sem ter a url

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -12,6 +12,9 @@
     <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
+    <meta name="robots" content="index">
+    <meta name="keywords" content="amadeus,amadeuslms,amadeus lms,amadeus cin,amadeus univasf,amadeus ufpe,amadeus cin ufpe">
+
 	<link href="{{ theme.favicon_url }}" rel="shortcut icon" />
 	<!-- Roboto font -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
